Attempt#2 to fix failing EsbProfileLongTest